--- a/H1EmuLauncher/Language/StringResources.nl-NL.xaml
+++ b/H1EmuLauncher/Language/StringResources.nl-NL.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item124">Launcher versiev</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Hoofd-Ontwikelaar</system:String>
-    <system:String x:Key="item127">Co-Ontwikkelaar</system:String>
+    <system:String x:Key="item127">Ontwikkelaars</system:String>
     <system:String x:Key="item128">Administrators</system:String>
     <system:String x:Key="item129">Bijdragers</system:String>
     <system:String x:Key="item130">Moderators</system:String>
