--- a/H1EmuLauncher/Language/StringResources.de-DE.xaml
+++ b/H1EmuLauncher/Language/StringResources.de-DE.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item124">Launcher Version v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Lead Entwickler</system:String>
-    <system:String x:Key="item127">Co-Entwickler</system:String>
+    <system:String x:Key="item127">Entwickler</system:String>
     <system:String x:Key="item128">Administratoren</system:String>
     <system:String x:Key="item129">Mitwirkende</system:String>
     <system:String x:Key="item130">Moderatoren</system:String>
