--- a/H1EmuLauncher/Language/StringResources.en.xaml
+++ b/H1EmuLauncher/Language/StringResources.en.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item124">Launcher Version v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Lead Development</system:String>
-    <system:String x:Key="item127">Co-Development</system:String>
+    <system:String x:Key="item127">Developers</system:String>
     <system:String x:Key="item128">Administrators</system:String>
     <system:String x:Key="item129">Contributors</system:String>
     <system:String x:Key="item130">Moderators</system:String>
