--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item124">Versión del launcher v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Desarrolladores líder</system:String>
-    <system:String x:Key="item127">Co-Desarrolladores</system:String>
+    <system:String x:Key="item127">Desarrolladores</system:String>
     <system:String x:Key="item128">Administradores</system:String>
     <system:String x:Key="item129">Colaboradores</system:String>
     <system:String x:Key="item130">Moderadores</system:String>
