--- a/H1EmuLauncher/Language/StringResources.hr.xaml
+++ b/H1EmuLauncher/Language/StringResources.hr.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item124">Verzija launchera v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Vodeći developer</system:String>
-    <system:String x:Key="item127">Co-Developer</system:String>
+    <system:String x:Key="item127">Programeri</system:String>
     <system:String x:Key="item128">Administratori</system:String>
     <system:String x:Key="item129">Suradnici</system:String>
     <system:String x:Key="item130">Moderatori</system:String>
