--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item124">Launcher version v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Desenvolvedor Principal</system:String>
-    <system:String x:Key="item127">Co-Desenvolvedor</system:String>
+    <system:String x:Key="item127">Desenvolvedores</system:String>
     <system:String x:Key="item128">Administradores</system:String>
     <system:String x:Key="item129">Contribuidores</system:String>
     <system:String x:Key="item130">Moderadores</system:String>
