--- a/H1EmuLauncher/Language/StringResources.ru-RU.xaml
+++ b/H1EmuLauncher/Language/StringResources.ru-RU.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item124">Версия лаунчера v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Ведущая разработка</system:String>
-    <system:String x:Key="item127">Со-разработка</system:String>
+    <system:String x:Key="item127">Разработчики</system:String>
     <system:String x:Key="item128">Администраторы</system:String>
     <system:String x:Key="item129">Авторы</system:String>
     <system:String x:Key="item130">Модераторы</system:String>
