--- a/H1EmuLauncher/Language/StringResources.tr-TR.xaml
+++ b/H1EmuLauncher/Language/StringResources.tr-TR.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item124">Başlatıcı Versiyonu v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
     <system:String x:Key="item126">Ana Geliştirici</system:String>
-    <system:String x:Key="item127">Eş-Geliştirici</system:String>
+    <system:String x:Key="item127">Geliştiriciler</system:String>
     <system:String x:Key="item128">Yöneticiler</system:String>
     <system:String x:Key="item129">Katkıda Bulunanlar</system:String>
     <system:String x:Key="item130">Moderatörler</system:String>
