--- a/H1EmuLauncher/Windows/DisclaimerWindow.xaml
+++ b/H1EmuLauncher/Windows/DisclaimerWindow.xaml
@@ -56,7 +56,7 @@
 
             <!-- Load dictionary into xaml resources just so we can see on the designer -->
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="..\Language\StringResources.en.xaml"/>
+                <ResourceDictionary Source="..\Language\StringResources.en-EN.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <Storyboard x:Key="CloseDisclaimer">
