--- a/H1EmuLauncher/Windows/AboutPageWindow.xaml
+++ b/H1EmuLauncher/Windows/AboutPageWindow.xaml
@@ -245,7 +245,7 @@
                             
                             <Run FontSize="18"
                                  Foreground="White"
-                                 Text="• Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo • Torenka • Moonlighter • Loopa • Cyberhound • Cur7 • 余科辰 •"/>
+                                 Text="• Relish • LegendsNeveerrDie • Delusional • KOBUNIX • Rhett • ZamZam • UTIL_TRACELINE • LordWaycrest  • 69_HaxMax • GinnessForever • Chriis • Flo • Torenka • Moonlighter • Loopa • Cyberhound • Cur7 • AlzaZhang •"/>
 
                             <LineBreak/>
                             <LineBreak/>
@@ -317,7 +317,7 @@
                             
                             <Run FontSize="18"
                                  Foreground="White"
-                                 Text="• AZAZ (Chinese) • MostMajestic (Croatian) • Skoz (French) • Xrextorn (Turkish) • Mihail (Bulgarian) • Triggl (German) • Ironwolves (Dutch) • Avcio (Polish) • Tox1c (Russian) • Negorath (Portuguese) • insus100 (Spanish) • SpjonK (Swedish) •"/>
+                                 Text="• AlzaZhang (Chinese) • MostMajestic (Croatian) • Skoz (French) • Xrextorn (Turkish) • Mihail (Bulgarian) • Triggl (German) • Ironwolves (Dutch) • Avcio (Polish) • Tox1c (Russian) • Negorath (Portuguese) • insus100 (Spanish) • SpjonK (Swedish) •"/>
 
                             <LineBreak/>
                             <LineBreak/>
