--- a/H1EmuLauncher/Language/StringResources.bg-BG.xaml
+++ b/H1EmuLauncher/Language/StringResources.bg-BG.xaml
@@ -98,7 +98,7 @@
     <system:String x:Key="item116">Разархивиране на сърварната информация...</system:String>
     <system:String x:Key="item118">Разархивиране node files...</system:String>
     <system:String x:Key="item120">Моля затворете H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe се използва.\n\nЗатворете всички отворени прозорци на H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe се използва.\n\nЗатворете всички отворени прозорци на H1Z1.\n\nМожете да използвате бутона по-долу, за да убиете всички процеси на H1Z1.</system:String>
     <system:String x:Key="item122">Сегашна версия на играта:</system:String>
     <system:String x:Key="item124">Версия на стартера v</system:String>
     <system:String x:Key="item125">Авторски права © 2021 | H1Emu Project</system:String>
@@ -163,4 +163,6 @@
     <system:String x:Key="item185">Сървърният скрипт спря прекалено рано и неочаквано.</system:String>
     <system:String x:Key="item186">Имаше грешка при отварянето на инсталационният файл:</system:String>
     <system:String x:Key="item187">Ако грешката продължава да се появява, опитайте да изтеглите файловете ръчно.</system:String>
+    <system:String x:Key="item188">ПРЕКРЪПВАНЕ</system:String>
+    <system:String x:Key="item189">УБИЙ</system:String>
 </ResourceDictionary>
