--- a/H1EmuLauncher/Language/StringResources.en-EN.xaml
+++ b/H1EmuLauncher/Language/StringResources.en-EN.xaml
@@ -98,7 +98,7 @@
     <system:String x:Key="item116">Unzipping server files...</system:String>
     <system:String x:Key="item118">Unzipping node files...</system:String>
     <system:String x:Key="item120">Please close H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nPlease close any open instances of H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nPlease close any open instances of H1Z1.\n\nYou can use the button below to kill all processes of H1Z1.</system:String>
     <system:String x:Key="item122">Current Game Version:</system:String>
     <system:String x:Key="item124">Launcher Version v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -163,4 +163,6 @@
     <system:String x:Key="item185">The server install script closed early and unexpectedly.</system:String>
     <system:String x:Key="item186">There was an error opening the installation file:</system:String>
     <system:String x:Key="item187">If this error persists, try downloading and running the installation file manually.</system:String>
+    <system:String x:Key="item188">RE-PATCHING</system:String>
+    <system:String x:Key="item189">KILL</system:String>
 </ResourceDictionary>
