--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -98,7 +98,7 @@
     <system:String x:Key="item116">Descomprimiendo archivos del servidor...</system:String>
     <system:String x:Key="item118">Descomprimiendo archivos de Node...</system:String>
     <system:String x:Key="item120">Por favor cierra H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe está en ejecución.\n\nCierre todas las instancias abiertas de H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe está en ejecución.\n\nCierre todas las instancias abiertas de H1Z1.\n\nPuede usar el botón a continuación para eliminar todos los procesos de H1Z1.</system:String>
     <system:String x:Key="item122">Versión De Juego Actual:</system:String>
     <system:String x:Key="item124">Versión del launcher v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -163,4 +163,6 @@
     <system:String x:Key="item185">El script de instalación del servidor se cerró antes de tiempo y de forma inesperada.</system:String>
     <system:String x:Key="item186">Hubo un error al abrir el archivo de instalación:</system:String>
     <system:String x:Key="item187">Si este error persiste, intente descargar y ejecutar el archivo de instalación manualmente.</system:String>
+    <system:String x:Key="item188">REPARCHADO</system:String>
+    <system:String x:Key="item189">MATAR</system:String>
 </ResourceDictionary>
