--- a/H1EmuLauncher/Language/StringResources.nl-NL.xaml
+++ b/H1EmuLauncher/Language/StringResources.nl-NL.xaml
@@ -98,7 +98,7 @@
     <system:String x:Key="item116">Unzippen server bestanden...</system:String>
     <system:String x:Key="item118">Unzippen node bestanden...</system:String>
     <system:String x:Key="item120">Sluit alstublieft H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe is momenteel in gebruik.\n\nSluit alle geopende exemplaren van H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe is momenteel in gebruik.\n\nSluit alle geopende exemplaren van H1Z1.\n\nU kunt de onderstaande knop gebruiken om alle processen van H1Z1 te beëindigen.</system:String>
     <system:String x:Key="item122">Huidige spel versie:</system:String>
     <system:String x:Key="item124">Launcher versiev</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -162,4 +162,6 @@
     <system:String x:Key="item185">Het serverinstallatiescript is vroeg en onverwacht afgesloten.</system:String>
     <system:String x:Key="item186">Er is een fout opgetreden bij het openen van het installatiebestand:</system:String>
     <system:String x:Key="item187">Als deze fout zich blijft voordoen, probeer dan het installatiebestand handmatig te downloaden en uit te voeren.</system:String>
+    <system:String x:Key="item188">OPNIEUW PATCHEN</system:String>
+    <system:String x:Key="item189">DODEN</system:String>
 </ResourceDictionary>
