--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -98,7 +98,7 @@
     <system:String x:Key="item116">Rozpakowywanie plików serwera...</system:String>
     <system:String x:Key="item118">Rozpakowywanie plików node...</system:String>
     <system:String x:Key="item120">Prosze zamknij H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe jest aktualnie uruchomiony.\n\nZamknij wszystkie otwarte instancje H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe jest aktualnie uruchomiony.\n\nZamknij wszystkie otwarte instancje H1Z1.\n\nMożesz użyć poniższego przycisku, aby zabić wszystkie procesy H1Z1.</system:String>
     <system:String x:Key="item122">Aktualna wersja gry:</system:String>
     <system:String x:Key="item124">Wersja launchera v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -163,4 +163,6 @@
     <system:String x:Key="item185">Skrypt instalacyjny serwera został zamknięty przedwcześnie i nieoczekiwanie.</system:String>
     <system:String x:Key="item186">Wystąpił błąd podczas otwierania pliku instalacyjnego:</system:String>
     <system:String x:Key="item187">Jeśli ten błąd będzie się powtarzał, spróbuj ręcznie pobrać i uruchomić plik instalacyjny.</system:String>
+    <system:String x:Key="item188">PONOWNE ŁATOWANIE</system:String>
+    <system:String x:Key="item189">ZABIĆ</system:String>
 </ResourceDictionary>
