--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -98,7 +98,7 @@
     <system:String x:Key="item116">A descompactar ficheiros do servidor...</system:String>
     <system:String x:Key="item118">A descompactar ficheiros node...</system:String>
     <system:String x:Key="item120">Por favor desligue o H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe está a ser usado.\n\nFeche todas as instâncias abertas de H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe está a ser usado.\n\nFeche todas as instâncias abertas de H1Z1.\n\nVocê pode usar o botão abaixo para matar todos os processos de H1Z1.</system:String>
     <system:String x:Key="item122">Versão atual do jogo:</system:String>
     <system:String x:Key="item124">Launcher version v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -163,4 +163,6 @@
     <system:String x:Key="item185">O script de instalação do servidor fechou cedo e inesperadamente.</system:String>
     <system:String x:Key="item186">Ocorreu um erro ao abrir o arquivo de instalação:</system:String>
     <system:String x:Key="item187">Se o erro persistir, tente baixar e executar o arquivo de instalação manualmente.</system:String>
+    <system:String x:Key="item188">RE-PATCHING</system:String>
+    <system:String x:Key="item189">MATAR</system:String>
 </ResourceDictionary>
