--- a/H1EmuLauncher/Language/StringResources.ru-RU.xaml
+++ b/H1EmuLauncher/Language/StringResources.ru-RU.xaml
@@ -98,7 +98,7 @@
     <system:String x:Key="item116">Распаковка файлов сервера...</system:String>
     <system:String x:Key="item118">Распаковка файлов NodeJS...</system:String>
     <system:String x:Key="item120">Пожалуйста закройте H1Z1.</system:String>
-    <system:String x:Key="item121">H1Z1.exe в настоящее время используется.\n\nПожалуйста, закройте все открытые экземпляры H1Z1.</system:String>
+    <system:String x:Key="item121">H1Z1.exe в настоящее время используется.\n\nПожалуйста, закройте все открытые экземпляры H1Z1.\n\nВы можете использовать кнопку ниже, чтобы убить все процессы H1Z1.</system:String>
     <system:String x:Key="item122">Текущая версия игры:</system:String>
     <system:String x:Key="item124">Версия лаунчера v</system:String>
     <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
@@ -163,4 +163,6 @@
     <system:String x:Key="item185">Сценарий установки сервера закрылся раньше и неожиданно.</system:String>
     <system:String x:Key="item186">При открытии установочного файла произошла ошибка:</system:String>
     <system:String x:Key="item187">Если эта ошибка повторяется, попробуйте загрузить и запустить установочный файл вручную.</system:String>
+    <system:String x:Key="item188">ПОВТОРНОЕ ИСПРАВЛЕНИЕ</system:String>
+    <system:String x:Key="item189">УБИЙСТВО</system:String>
 </ResourceDictionary>
