--- a/H1EmuLauncher/Windows/MessageBoxWindow.xaml
+++ b/H1EmuLauncher/Windows/MessageBoxWindow.xaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d"
         Title="MessageBox"
         x:Name="MessageBox"
-        MinWidth="350"
+        MinWidth="450"
         MaxWidth="1200"
         MinHeight="210"
         MaxHeight="900"
@@ -185,21 +185,43 @@
                                TextWrapping="Wrap"
                                TextAlignment="Center"/>
 
-                        <!-- Close msgbox window button -->
-                        <Button Grid.Row="1"
-                            Click="OkButton"
-                            RenderOptions.BitmapScalingMode="Fant"
-                            Width="100"
-                            Height="30"
-                            Margin="0,10,0,20"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Center"
-                            Foreground="White"
-                            FontFamily="Arial Black"
-                            FontSize="18"
-                            BorderThickness="0"
-                            Content="{DynamicResource item92}"
-                            Style="{DynamicResource StandardButton}"/>
+                        <UniformGrid Grid.Row="1"
+                                     Rows="1">
+                            
+                            <!-- Close h1z1 process button -->
+                            <Button x:Name="killH1Z1Button"
+                                    Visibility="Collapsed"
+                                    Click="CloseH1Z1"
+                                    RenderOptions.BitmapScalingMode="Fant"
+                                    Width="auto"
+                                    Padding="30,0,30,0"
+                                    Height="30"
+                                    Margin="0,10,0,20"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"
+                                    Foreground="White"
+                                    FontFamily="Arial Black"
+                                    FontSize="18"
+                                    BorderThickness="0"
+                                    Content="{DynamicResource item189}"
+                                    Style="{DynamicResource StandardButton}"/>
+
+                            <!-- Close msgbox window button -->
+                            <Button Click="OkButton"
+                                    RenderOptions.BitmapScalingMode="Fant"
+                                    Width="auto"
+                                    Padding="30,0,30,0"
+                                    Height="30"
+                                    Margin="0,10,0,20"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"
+                                    Foreground="White"
+                                    FontFamily="Arial Black"
+                                    FontSize="18"
+                                    BorderThickness="0"
+                                    Content="{DynamicResource item92}"
+                                    Style="{DynamicResource StandardButton}"/>
+                        </UniformGrid>
                     </Grid>
                 </Border>
             </Border>
